...
            "value" : "Appearance"
          }
        }
      }
    },

    "Beispieldaten entfernen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove Sample Data"
          }
        }
      }
    },

    "Beispieldaten laden" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Load Sample Data"
          }
...
            "value" : "Cabin Number"
          }
        }
      }
    },

    "Karte" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Map"
          }
...
            "value" : "Enter Manually"
          }
        }
      }
    },

    "Mehr" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More"
          }
...
            "value" : "Travel Duration"
          }
        }
      }
    },

    "Reisen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cruises"
          }
...
            "value" : "Route"
          }
        }
      }
    },

    "Routenauswahl" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Route selection"
          }
...
            "value" : "Active Ships (Catalog)"
          }
        }
      }
    },

    "Alle Reisen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All Trips"
          }
...
